orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <description>Insurance policies - BlackRoad Agency CRM</description>
    <label>Policy</label>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>