orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Policy__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Text</type>
    <length>100</length>
</CustomField>