orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Policy__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Life</fullName><default>false</default><label>Life</label></value>
            <value><fullName>Health</fullName><default>false</default><label>Health</label></value>
            <value><fullName>Auto</fullName><default>false</default><label>Auto</label></value>
            <value><fullName>Home</fullName><default>false</default><label>Home</label></value>
            <value><fullName>Umbrella</fullName><default>false</default><label>Umbrella</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
            <value><fullName>Disability</fullName><default>false</default><label>Disability</label></value>
            <value><fullName>Long Term Care</fullName><default>false</default><label>Long Term Care</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>