orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Policy__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <label>Annual Premium</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>